--- a/.github/workflows/fetch-and-process.yml
+++ b/.github/workflows/fetch-and-process.yml
@@ -37,10 +37,26 @@ jobs:
           # 修改文件名为 index.js
           mv main.js index.js
 
-      - name: Parse and Download All JS Files
+      - name: Parse and Validate JSON Data
+        id: validate_json
         run: |
           # 提取嵌套 JSON 数据
-          JSON_DATA=$(grep -oP 'JSON\.parse\(\K.*(?=\);)' index.js | tr -d '\\"')
+          JSON_RAW=$(grep -oP 'JSON\.parse\(\K.*(?=\);)' index.js | tr -d '\\"')
+
+          # 打印调试信息
+          echo "Extracted JSON: $JSON_RAW"
+
+          # 验证 JSON 格式
+          echo $JSON_RAW | jq . > /dev/null
+          echo "Validated JSON successfully"
+
+          # 保存为环境变量
+          echo "JSON_DATA=$JSON_RAW" >> $GITHUB_ENV
+
+      - name: Download All JS Files
+        run: |
+          # 从环境变量中加载 JSON 数据
+          JSON_DATA=${{ env.JSON_DATA }}
 
           # 将 JSON 数据转换为文件列表
           FILE_LIST=$(echo $JSON_DATA | jq -r '.[] | select(endswith(".js"))')
