--- a/.github/workflows/fetch-and-process.yml
+++ b/.github/workflows/fetch-and-process.yml
@@ -2,7 +2,7 @@ name: Fetch Specific JS Files
 
 on:
   schedule:
-    - cron: "0 0 * * *" # 每天 00:00 执行
+    - cron: "0 0 * * *" # 每天 00:00 运行
   workflow_dispatch: # 手动触发
 
 jobs:
@@ -40,10 +40,22 @@ jobs:
       - name: Extract and Download Specific JS Files
         run: |
           # 提取嵌套 JSON 数据
-          JSON_DATA=$(grep -oP 'JSON\.parse\(\K.*(?=\);)' index.js | tr -d '\\"')
+          JSON_RAW=$(grep -oP 'JSON\.parse\(\K.*(?=\);)' index.js)
 
-          # 将 JSON 数据转换为文件列表
-          FILE_LIST=$(echo $JSON_DATA | jq -r '.[] | select(endswith(".js"))')
+          # 打印提取的原始 JSON 数据（用于调试）
+          echo "Raw JSON Data: $JSON_RAW"
+
+          # 清理数据，去除多余的转义符和引号
+          JSON_CLEAN=$(echo $JSON_RAW | sed 's/\\"/"/g' | sed 's/^"//' | sed 's/"$//')
+
+          # 验证清理后的 JSON 数据
+          echo "Clean JSON Data: $JSON_CLEAN"
+
+          # 使用 jq 解析 JSON 数据并提取文件列表
+          FILE_LIST=$(echo $JSON_CLEAN | jq -r '.[] | select(endswith(".js"))')
+
+          # 打印提取的文件列表（用于调试）
+          echo "File List: $FILE_LIST"
 
           # 关键字数组
           KEYWORDS=("esp32s2" "esp8266" "stub_flasher_32s2" "stub_flasher_8266")
