--- a/.github/workflows/fetch-and-process.yml
+++ b/.github/workflows/fetch-and-process.yml
@@ -33,6 +33,9 @@ jobs:
         run: |
           # 下载主 JS 文件
           curl -s ${{ env.FULL_URL }} -o index.js
+         
+         # 修改内容，将 0x1000 替换为 0x0000
+          sed -i 's/element1\.value = "0x1000";/element1.value = "0x0000";/' index.js
 
       - name: Extract and Download Specific JS Files
         run: |
