--- a/.github/workflows/fetch-and-process.yml
+++ b/.github/workflows/fetch-and-process.yml
@@ -2,7 +2,7 @@ name: Fetch Specific JS Files
 
 on:
   schedule:
-    - cron: "0 0 * * *" # 每天 00:00 运行
+    - cron: "0 0 * * 1" # 每周一 00:00 运行
   workflow_dispatch: # 手动触发
 
 jobs:
