--- a/.github/workflows/fetch-and-process.yml
+++ b/.github/workflows/fetch-and-process.yml
@@ -1,8 +1,8 @@
 name: Fetch Specific JS Files
 
 on:
-  schedule:
-    - cron: "0 0 * * 1" # 每周一运行一次
+  #schedule:
+    #- cron: "0 0 * * 1" # 每周一运行一次
   workflow_dispatch: # 手动触发
 
 jobs:
